Composite: implement UnitLeaf base class